test/python/expected/pymssql/TestTransactionSupportForProcedure.out
#setup
create table txnproctable (c1 int not null, c2 varchar(100))

# PROC
# 		BEGIN TRAN
#			SAVEPOINT
#  		ROLLBACK SAVEPOINT
#		COMMIT
create procedure txnproc1 as begin tran; insert into txnproctable values (1, 'abc'); save tran sp1; update txnproctable set c1 = c1 + 1;  rollback tran sp1; commit tran;
select @@trancount;
~~START~~
int
0
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
~~END~~

exec txnproc1;
select @@trancount;
~~START~~
int
0
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
1#!#abc
~~END~~

~~ROW COUNT: 1~~



# PROC
# 		BEGIN TRAN
#			SAVEPOINT
#  		ROLLBACK SAVEPOINT
#		ROLLBACK
drop procedure txnproc1;
create procedure txnproc1 as begin tran; insert into txnproctable values(2, 'xyz'); save tran sp1; delete from txnproctable; rollback tran sp1; rollback tran;
select @@trancount;
~~START~~
int
0
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
1#!#abc
~~END~~

~~ROW COUNT: 1~~

exec txnproc1;
select @@trancount;
~~START~~
int
0
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
1#!#abc
~~END~~

~~ROW COUNT: 1~~



# PROC
# 		BEGIN TRAN
#			SAVEPOINT
#  		ROLLBACK SAVEPOINT
# COMMIT
drop procedure txnproc1
create procedure txnproc1 as begin tran; insert into txnproctable values(3, 'dbd'); save tran sp1; update txnproctable set c1 = c1 + 1; rollback tran sp1;
select @@trancount
~~START~~
int
0
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
1#!#abc
~~END~~

~~ROW COUNT: 1~~

exec txnproc1;
~~ERROR (Code: 266)~~
~~ERROR (Message: 'Transaction count after execution indicates a mismatch number of BEGIN and COMMIT statements. Previous count 0 current count 1DB-Lib error message 20018, severity 16:\nGeneral SQL Server error: Check messages from the SQL Server\n')~~

select @@trancount
~~START~~
int
1
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
1#!#abc
3#!#dbd
~~END~~

~~ROW COUNT: 2~~

commit tran;
select @@trancount
~~START~~
int
0
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
1#!#abc
3#!#dbd
~~END~~

~~ROW COUNT: 2~~



# PROC
# 		BEGIN TRAN
#			SAVEPOINT
# ROLLBACK SAVEPOINT
# COMMIT
drop procedure txnproc1
create procedure txnproc1 as begin tran; insert into txnproctable values(4, 'sbd'); save tran sp1; update txnproctable set c1 = c1 + 1;
select @@trancount
~~START~~
int
0
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
1#!#abc
3#!#dbd
~~END~~

~~ROW COUNT: 2~~

exec txnproc1;
~~ERROR (Code: 266)~~
~~ERROR (Message: 'Transaction count after execution indicates a mismatch number of BEGIN and COMMIT statements. Previous count 0 current count 1DB-Lib error message 20018, severity 16:\nGeneral SQL Server error: Check messages from the SQL Server\n')~~

select @@trancount
~~START~~
int
1
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
2#!#abc
4#!#dbd
5#!#sbd
~~END~~

~~ROW COUNT: 3~~

rollback tran sp1;
select @@trancount
~~START~~
int
1
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
1#!#abc
3#!#dbd
4#!#sbd
~~END~~

~~ROW COUNT: 3~~

commit tran;
select @@trancount
~~START~~
int
0
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
1#!#abc
3#!#dbd
4#!#sbd
~~END~~

~~ROW COUNT: 3~~



# BEGIN TRAN 
# PROC
#		SAVEPOINT
# 		ROLLBACK SAVEPOINT
# COMMIT
begin tran;
select @@trancount
~~START~~
int
1
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
1#!#abc
3#!#dbd
4#!#sbd
~~END~~

~~ROW COUNT: 3~~

drop procedure txnproc1
create procedure txnproc1 as insert into txnproctable values(5, 'abc'); save tran sp1; update txnproctable set c1 = c1 + 1; rollback tran sp1;
select @@trancount
~~START~~
int
1
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
1#!#abc
3#!#dbd
4#!#sbd
~~END~~

~~ROW COUNT: 3~~

exec txnproc1;
select @@trancount
~~START~~
int
1
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
1#!#abc
3#!#dbd
4#!#sbd
5#!#abc
~~END~~

~~ROW COUNT: 4~~

commit tran;
select @@trancount
~~START~~
int
0
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
1#!#abc
3#!#dbd
4#!#sbd
5#!#abc
~~END~~

~~ROW COUNT: 4~~



# BEGIN TRAN 
# PROC
#		SAVEPOINT
# 		ROLLBACK SAVEPOINT
# ROLLBACK	
begin tran;
select @@trancount
~~START~~
int
1
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
1#!#abc
3#!#dbd
4#!#sbd
5#!#abc
~~END~~

~~ROW COUNT: 4~~

drop procedure txnproc1
create procedure txnproc1 as insert into txnproctable values(6, 'abc'); save tran sp1; update txnproctable set c1 = c1 + 1; rollback tran sp1;
select @@trancount
~~START~~
int
1
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
1#!#abc
3#!#dbd
4#!#sbd
5#!#abc
~~END~~

~~ROW COUNT: 4~~

exec txnproc1;
select @@trancount
~~START~~
int
1
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
1#!#abc
3#!#dbd
4#!#sbd
5#!#abc
6#!#abc
~~END~~

~~ROW COUNT: 5~~

commit tran;
select @@trancount
~~START~~
int
0
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
1#!#abc
3#!#dbd
4#!#sbd
5#!#abc
6#!#abc
~~END~~

~~ROW COUNT: 5~~


# BEGIN TRAN 
# PROC
#		SAVEPOINT
# 		ROLLBACK SAVEPOINT
#		COMMIT
begin tran;
select @@trancount
~~START~~
int
1
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
1#!#abc
3#!#dbd
4#!#sbd
5#!#abc
6#!#abc
~~END~~

~~ROW COUNT: 5~~

drop procedure txnproc1
create procedure txnproc1 as insert into txnproctable values(7, 'abc'); save tran sp1; update txnproctable set c1 = c1 + 1; rollback tran sp1; update txnproctable set c1 = c1 + 1; commit tran; 
select @@trancount
~~START~~
int
1
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
1#!#abc
3#!#dbd
4#!#sbd
5#!#abc
6#!#abc
~~END~~

~~ROW COUNT: 5~~

exec txnproc1;
~~ERROR (Code: 266)~~
~~ERROR (Message: 'Transaction count after execution indicates a mismatch number of BEGIN and COMMIT statements. Previous count 1 current count 0DB-Lib error message 20018, severity 16:\nGeneral SQL Server error: Check messages from the SQL Server\n')~~

select @@trancount
~~START~~
int
0
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
2#!#abc
4#!#dbd
5#!#sbd
6#!#abc
7#!#abc
8#!#abc
~~END~~

~~ROW COUNT: 6~~


# BEGIN TRAN 
# PROC
#		SAVEPOINT
# 		ROLLBACK SAVEPOINT
#		ROLLBACK
begin tran;
select @@trancount
~~START~~
int
1
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
2#!#abc
4#!#dbd
5#!#sbd
6#!#abc
7#!#abc
8#!#abc
~~END~~

~~ROW COUNT: 6~~

drop procedure txnproc1
create procedure txnproc1 as insert into txnproctable values(8, 'abc'); save tran sp1; update txnproctable set c1 = c1 + 1; rollback tran sp1; update txnproctable set c1 = c1 + 1; rollback tran; 
select @@trancount
~~START~~
int
1
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
2#!#abc
4#!#dbd
5#!#sbd
6#!#abc
7#!#abc
8#!#abc
~~END~~

~~ROW COUNT: 6~~

exec txnproc1;
~~ERROR (Code: 266)~~
~~ERROR (Message: 'Transaction count after execution indicates a mismatch number of BEGIN and COMMIT statements. Previous count 1 current count 0DB-Lib error message 20018, severity 16:\nGeneral SQL Server error: Check messages from the SQL Server\n')~~

select @@trancount
~~START~~
int
0
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
2#!#abc
4#!#dbd
5#!#sbd
6#!#abc
7#!#abc
8#!#abc
~~END~~

~~ROW COUNT: 6~~


# BEGIN TRAN
# START SAVEPOINT
# PROC
# ROLLBACK SAVEPOINT
# ROLLBACK
begin tran;
select @@trancount
~~START~~
int
1
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
2#!#abc
4#!#dbd
5#!#sbd
6#!#abc
7#!#abc
8#!#abc
~~END~~

~~ROW COUNT: 6~~

save tran sp1;
select @@trancount
~~START~~
int
1
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
2#!#abc
4#!#dbd
5#!#sbd
6#!#abc
7#!#abc
8#!#abc
~~END~~

~~ROW COUNT: 6~~

drop procedure txnproc1
create procedure txnproc1 as insert into txnproctable values(9, 'abc'); update txnproctable set c1 = c1 + 1;
select @@trancount
~~START~~
int
1
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
2#!#abc
4#!#dbd
5#!#sbd
6#!#abc
7#!#abc
8#!#abc
~~END~~

~~ROW COUNT: 6~~

exec txnproc1;
~~ROW COUNT: 7~~

rollback tran sp1;
select @@trancount
~~START~~
int
1
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
2#!#abc
4#!#dbd
5#!#sbd
6#!#abc
7#!#abc
8#!#abc
~~END~~

~~ROW COUNT: 6~~

rollback tran;
select @@trancount
~~START~~
int
0
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
2#!#abc
4#!#dbd
5#!#sbd
6#!#abc
7#!#abc
8#!#abc
~~END~~

~~ROW COUNT: 6~~


# BEGIN TRAN
# START SAVEPOINT
# PROC
# ROLLBACK SAVEPOINT
# ROLLBACK
begin tran;
select @@trancount
~~START~~
int
1
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
2#!#abc
4#!#dbd
5#!#sbd
6#!#abc
7#!#abc
8#!#abc
~~END~~

~~ROW COUNT: 6~~

save tran sp1;
select @@trancount
~~START~~
int
1
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
2#!#abc
4#!#dbd
5#!#sbd
6#!#abc
7#!#abc
8#!#abc
~~END~~

~~ROW COUNT: 6~~

drop procedure txnproc1
create procedure txnproc1 as insert into txnproctable values(10, 'abc'); update txnproctable set c1 = c1 + 1;
select @@trancount
~~START~~
int
1
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
2#!#abc
4#!#dbd
5#!#sbd
6#!#abc
7#!#abc
8#!#abc
~~END~~

~~ROW COUNT: 6~~

exec txnproc1;
~~ROW COUNT: 7~~

rollback tran sp1;
select @@trancount
~~START~~
int
1
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
2#!#abc
4#!#dbd
5#!#sbd
6#!#abc
7#!#abc
8#!#abc
~~END~~

~~ROW COUNT: 6~~

commit tran;
select @@trancount
~~START~~
int
0
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
2#!#abc
4#!#dbd
5#!#sbd
6#!#abc
7#!#abc
8#!#abc
~~END~~

~~ROW COUNT: 6~~


# BEGIN TRAN
# START SAVEPOINT
# PROC
# 		ROLLBACK SAVEPOINT
# ROLLBACK
begin tran;
select @@trancount
~~START~~
int
1
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
2#!#abc
4#!#dbd
5#!#sbd
6#!#abc
7#!#abc
8#!#abc
~~END~~

~~ROW COUNT: 6~~

save tran sp1;
select @@trancount
~~START~~
int
1
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
2#!#abc
4#!#dbd
5#!#sbd
6#!#abc
7#!#abc
8#!#abc
~~END~~

~~ROW COUNT: 6~~

drop procedure txnproc1
create procedure txnproc1 as insert into txnproctable values(11, 'abc'); rollback tran sp1; update txnproctable set c1 = c1 + 1;
select @@trancount
~~START~~
int
1
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
2#!#abc
4#!#dbd
5#!#sbd
6#!#abc
7#!#abc
8#!#abc
~~END~~

~~ROW COUNT: 6~~

exec txnproc1;
~~ROW COUNT: 6~~

commit tran;
select @@trancount
~~START~~
int
0
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
3#!#abc
5#!#dbd
6#!#sbd
7#!#abc
8#!#abc
9#!#abc
~~END~~

~~ROW COUNT: 6~~


# PROC1
#		BEGIN TRAN
#		PROC2
#			PROC3
#				BEGIN TRAN
#				START SAVEPOINT
#				ROLLBACK SAVEPOINT
#			COMMIT
#	COMMIT
create procedure txnProc3 as begin tran; insert into txnproctable values (16, 'abc'); save tran sp1; update txnproctable set c1 = c1 + 1;  rollback tran sp1;
select @@trancount
~~START~~
int
0
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
3#!#abc
5#!#dbd
6#!#sbd
7#!#abc
8#!#abc
9#!#abc
~~END~~

~~ROW COUNT: 6~~

create procedure txnProc2 as update txnproctable set c1 = c1 + 1; exec txnProc3; commit tran;
select @@trancount
~~START~~
int
0
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
3#!#abc
5#!#dbd
6#!#sbd
7#!#abc
8#!#abc
9#!#abc
~~END~~

~~ROW COUNT: 6~~

drop procedure txnproc1
create procedure txnproc1 as delete from txnproctable; begin tran; exec txnProc2;
select @@trancount
~~START~~
int
0
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
3#!#abc
5#!#dbd
6#!#sbd
7#!#abc
8#!#abc
9#!#abc
~~END~~

~~ROW COUNT: 6~~

exec txnproc1;
~~ERROR (Code: 266)~~
~~ERROR (Message: 'Transaction count after execution indicates a mismatch number of BEGIN and COMMIT statements. Previous count 1 current count 2DB-Lib error message 20018, severity 16:\nGeneral SQL Server error: Check messages from the SQL Server\nDB-Lib error message 20018, severity 16:\nGeneral SQL Server error: Check messages from the SQL Server\n')~~

select @@trancount
~~START~~
int
1
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
16#!#abc
~~END~~

~~ROW COUNT: 1~~

commit tran;
select @@trancount
~~START~~
int
0
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
16#!#abc
~~END~~

~~ROW COUNT: 1~~


# PROC1
#		BEGIN TRAN
#		PROC2
#			PROC3
#				BEGIN TRAN
#				START SAVEPOINT
#				ROLLBACK SAVEPOINT
#			ROLLBACK TRAN
#	COMMIT
drop procedure txnproc3
create procedure txnProc3 as begin tran; insert into txnproctable values (20, 'abc'); save tran sp1; update txnproctable set c1 = c1 + 1;  rollback tran sp1;
select @@trancount
~~START~~
int
0
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
16#!#abc
~~END~~

~~ROW COUNT: 1~~

drop procedure txnproc2
create procedure txnProc2 as update txnproctable set c1 = c1 + 1; exec txnProc3; rollback tran;
select @@trancount
~~START~~
int
0
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
16#!#abc
~~END~~

~~ROW COUNT: 1~~

drop procedure txnproc1
create procedure txnproc1 as delete from txnproctable; begin tran; exec txnProc2;
select @@trancount
~~START~~
int
0
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
16#!#abc
~~END~~

~~ROW COUNT: 1~~

exec txnproc1;
~~ERROR (Code: 266)~~
~~ERROR (Message: 'Transaction count after execution indicates a mismatch number of BEGIN and COMMIT statements. Previous count 1 current count 2DB-Lib error message 20018, severity 16:\nGeneral SQL Server error: Check messages from the SQL Server\nDB-Lib error message 20018, severity 16:\nGeneral SQL Server error: Check messages from the SQL Server\n')~~

select @@trancount
~~START~~
int
0
~~END~~

~~ROW COUNT: 1~~

select * from txnproctable order by c1;
~~START~~
int#!#int
~~END~~


#cleanup
drop procedure txnproc3
drop procedure txnproc2
drop procedure txnproc1
drop table txnproctable
